Safety Map: fix incident selection propagation, alert navigation, and zone rendering
- Fix _mapLocation in EmergencyAlertDetailScreen to use greenZoneKm instead of null radiusKm
- Always load incident when incidentId exists for richer fallback data
- In general Safety Map mode, populate incidentCenter/disasters from selected Incident object
- Map camera and zone circles follow selected incident, not GPS fallback
- Old zones cleared when changing incident selection
- Add debug logs: ALERT-SAFETY-MAP-NAV, SAFETY-MAP-CONSTRUCTOR, SAFETY-MAP-INCIDENT-SELECT, SAFETY-MAP-CAMERA, SAFETY-MAP-ZONES
- Backend: AlertRequest removes radiusKm, AlertResponse adds zone radii from SeverityZoneConfig
- Add incidents, device tokens, FCM notifications, severity zone config
- Flutter dropdown uses String IDs to avoid Incident equality issues